--- a/PIN/scripts/CSS.css
+++ b/PIN/scripts/CSS.css
@@ -6,7 +6,6 @@
     padding:5px;
 }
 #section {
-	height:600px;
     padding-top:50px;
 	padding-bottom:50px;
 }
@@ -19,13 +18,7 @@
     padding:5px;
 }
 #content {
-	margin:10px;
-	margin-top:35px;
-	padding:10px;
-}
-#content1 {
-	margin:10px;
-	margin-top:35px;
+	margin: 10px;
 	padding:10px;
 }
 .button {
@@ -37,6 +30,7 @@
     font-size: 20px;
     border: none;
     cursor: pointer;
+	margin-top: 20px;
 }
 .button:hover {
     background-color: #202020;
@@ -56,4 +50,11 @@
 	background-color: white;
     color: black;
     border-radius: 5px;
+}
+.input2 {
+	font-size: 50px;
+	margin: 10px;
+}
+.content{
+	font-size: 30px;
 }
